Commit antes de viajar en el tiempo

--- a/comandosGit.html
+++ b/comandosGit.html
@@ -134,6 +134,30 @@
                 <li>Esta línea hará que se agreguen al stage todos los archivos de la carpeta css</li>
             </ul>
         </li>
+        <li>git status --short
+            <ul>
+                <li>Informe condensado del repositorio</li>
+            </ul>
+        </li>
+        <li>git config --global alias.(letra designada por nosotros) "status --short"
+            <ul>
+                <li>Esta linea nos servira para crear nuestros propios alias</li>
+            </ul>
+        </li>
+        <li>git config --global -e
+            <ul>
+                <li>Esta linea nos sirve para editar los alias</li>
+                <li>Para salir:
+                    <ul>
+                        <li>esc</li>
+                        <li>dos puntos</li>
+                        <li>w (escribir)</li>
+                        <li>q (salir)</li>
+                        <li>!</li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
     </ul>
     
 </body>
