Instalaciones agregado y comandos actualizado

--- a/comandosGit.html
+++ b/comandosGit.html
@@ -158,6 +158,13 @@
                 </li>
             </ul>
         </li>
+        <li>git diff
+            <ul>
+                <li>"a" es la version anterior</li>
+                <li>"b" es la version actual</li>
+                 
+            </ul>
+        </li>
     </ul>
     
 </body>
