Archivo actualizaciones corregido en el tiempo

--- a/comandosGit.html
+++ b/comandosGit.html
@@ -162,10 +162,35 @@
             <ul>
                 <li>"a" es la version anterior</li>
                 <li>"b" es la version actual</li>
-                 
+            </ul>
+        </li>
+        <li>git diff --staged
+            <ul>
+                <li>Con esta línea podremos ver la información cuando los archivos esten en el "stage"</li>
+            </ul>
+        </li>
+        <li>git commit --amend -m "Mensaje del commit"
+            <ul>
+                <li>Con este comando podemos editar el texto de nuestro commit</li>
+            </ul>
+        </li>
+        <li>git reset --soft HEAD^
+            <ul>
+                <li>HEAD está apuntando al último commit</li>
+                <li>^ indica el ultimo commit antes del HEAD</li>
+                <li>^2, ^3, podemos establecer tantos commits anteriores como deseemos</li>
+            </ul>
+        </li>
+        <li>$ git add -A
+            <ul>
+                <li>git config core.autocrlf true</li>
+                <li>Si tenemos esta advertencia, podemos configurar la linea superior para evitar que se presente</li>
             </ul>
         </li>
     </ul>
+
+    <!-- <script src="JS/script001.js"></script> -->
+    <script src="JS/imc.js"></script>
     
 </body>
 </html>
