Actualizacion de comandos.html

--- a/comandosGit.html
+++ b/comandosGit.html
@@ -187,6 +187,12 @@
                 <li>Si tenemos esta advertencia, podemos configurar la linea superior para evitar que se presente</li>
             </ul>
         </li>
+        <li>git reset --soft "hash"
+            <ul>
+                <li>Esta línea nos permite ir a un commit determinado y agregar información</li>
+                <li>Llos commits postyeriores al commit seleccionado se perderán</li>
+            </ul>
+        </li>
     </ul>
 
     <!-- <script src="JS/script001.js"></script> -->
