Guardando cambios en comandos

--- a/comandosGit.html
+++ b/comandosGit.html
@@ -193,6 +193,16 @@
                 <li>Llos commits postyeriores al commit seleccionado se perderán</li>
             </ul>
         </li>
+        <li>git reflog
+            <ul>
+                <li>Muestra el historial de los commits realizados</li>
+            </ul>
+        </li>
+        <li>git reset --hard "hash"
+            <ul>
+                <li>Con esta linea podemos volver al estado del repositorio que necesitemos</li>
+            </ul>
+        </li>
     </ul>
 
     <!-- <script src="JS/script001.js"></script> -->
