Guardando cam,bios en comandos

--- a/comandos-Git-github.html
+++ b/comandos-Git-github.html
@@ -242,6 +242,11 @@
                 <li>Para terminar de eliminar el archivo debemos hacer un commit</li>
             </ul>
         </li>
+        <li>Fuera de git
+            <ul>
+                <li>Para renombnrar fuera de git, despues de cambiar el nombre, tenemos que añadir el archivo al stage y despues hacer commit</li>
+            </ul>
+        </li>
     </ul>
 
     <!-- <script src="JS/script001.js"></script> -->
