Commit con cambios hasta ramas en comandos

--- a/comandos-Git-github.html
+++ b/comandos-Git-github.html
@@ -245,6 +245,7 @@
         <li>Fuera de git
             <ul>
                 <li>Para renombnrar fuera de git, despues de cambiar el nombre, tenemos que añadir el archivo al stage y despues hacer commit</li>
+                <li>Para eliminar, despues de haber eliminado el archivo, debemos hacer un commit</li>
             </ul>
         </li>
     </ul>
