Commit en rama nueva con los ultimos cambios en comandos

--- a/comandos-Git-github.html
+++ b/comandos-Git-github.html
@@ -248,6 +248,16 @@
                 <li>Para eliminar, despues de haber eliminado el archivo, debemos hacer un commit</li>
             </ul>
         </li>
+        <li>git branch ramaNueva
+            <ul>
+                <li>Este comando nos sirve para crear ramas nuevas</li>
+            </ul>
+        </li>
+        <li>git checkout ramaNueva
+            <ul>
+                <li>Con esta línea nos podemos cambiar de rama</li>
+            </ul>
+        </li>
     </ul>
 
     <!-- <script src="JS/script001.js"></script> -->
