Commit con los ultimos cambios para hacer merge

--- a/comandos-Git-github.html
+++ b/comandos-Git-github.html
@@ -258,6 +258,12 @@
                 <li>Con esta línea nos podemos cambiar de rama</li>
             </ul>
         </li>
+        <li>git merge ramaNueva
+            <ul>
+                <li>Con esta línea podemos unir nuestra rama secundaria a la principal</li>
+                <li>Para hacer esta operacion tenemoas quwe estar en la rama destino</li>
+            </ul>
+        </li>
     </ul>
 
     <!-- <script src="JS/script001.js"></script> -->
