Creando un archivo en la rama mainNew

--- a/comandos-Git-github.html
+++ b/comandos-Git-github.html
@@ -264,6 +264,26 @@
                 <li>Para hacer esta operacion tenemoas quwe estar en la rama destino</li>
             </ul>
         </li>
+        <li>git branch
+            <ul>
+                <li>Con esta linea podemos ver cuantas ramas existen en nuestro repositorio</li>
+            </ul>
+        </li>
+        <li>git branch -d ramaNueva
+            <ul>
+                <li>Con esta línea eliminamos las ramas</li>
+            </ul>
+        </li>
+        <li>git branch -d ramaNueva -f
+            <ul>
+                <li>Con esta línea forzamos la eliminacion de la rama en caso de estar haciendo el merge con información que no se esté usando</li>
+            </ul>
+        </li>
+        <li>git checkout -b ramaNueva
+            <ul>
+                <li>Con esta linea creamos una rama nueva y al mismo tiempo nos cambiamos hacia ella</li>
+            </ul>
+        </li>
     </ul>
 
     <!-- <script src="JS/script001.js"></script> -->
