actualizando comando para subirlos a github

--- a/comandos-Git-github.html
+++ b/comandos-Git-github.html
@@ -401,6 +401,33 @@
                 </li>
             </ul>
         </li>
+        <li>github
+            <ul>
+                <li>git remote add origin https://github.com/Bartndel/udemyWebGitHub.git
+                    <ul>
+                        <li>En github creamos repositorio</li>
+                        <li>en git uso esta linea para agregar mi repositorio remoto</li>
+                    </ul>
+                </li>
+                <li>git remote -v 
+                    <ul>
+                        <li>Revisar las fuentes remotas del repositorio</li>
+                    </ul>
+                </li>
+                <li>git push -u origin main
+                    <ul>
+                        <li>Origin es el repositorio remoto</li>
+                        <li>main es la raa a donde seran enviados mis cambios</li>
+                        <li>-u me ayuda a que la proxima vez que haga push, no necesite especificar la rama</li>
+                    </ul>
+                </li>
+                <li>git push --tags
+                    <ul>
+                        <li>Esta linea me sirve para hacer push de las etiquetas en mi repositorio local</li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
     </ul>
 
     <!-- <script src="JS/script001.js"></script> -->
