Comando para clonar repositorio desde github

--- a/comandos-Git-github.html
+++ b/comandos-Git-github.html
@@ -426,6 +426,14 @@
                         <li>Esta linea me sirve para hacer push de las etiquetas en mi repositorio local</li>
                     </ul>
                 </li>
+                <li>git clone https://github.com/Bartndel/udemyWebGitHub.git
+                    <ul>
+                        <li>Esta linea hara que pueda clonar mi repositorio localmente</li>
+                        <li>Debo estar colocado en el directorio donde creare el repositorio</li>
+                        <li>Y ejecutar en la terminal este comando</li>
+                        <li>Me creara una carpeta dentro de la carpeta asi que debo seleecionar bien la ruta</li>
+                    </ul>
+                </li>
             </ul>
         </li>
     </ul>
