Corrigiendo errores de maquetacion en comandos.html

--- a/comandos-Git-github.html
+++ b/comandos-Git-github.html
@@ -432,6 +432,12 @@
                         <li>Debo estar colocado en el directorio donde creare el repositorio</li>
                         <li>Y ejecutar en la terminal este comando</li>
                         <li>Me creara una carpeta dentro de la carpeta asi que debo seleecionar bien la ruta</li>
+                    <li>
+                </li>
+                <li>git config --global pull.ff only
+                    <ul>
+                        <li>Con esta linea configuro mi sistema para que aplique esta tecnica por defecto</li>
+                        <li>puedo revisar esta configuracion en "git config --global -e"</li>
                     </ul>
                 </li>
             </ul>
