Actualizacion de comandos en git

--- a/comandos-Git-github.html
+++ b/comandos-Git-github.html
@@ -45,7 +45,7 @@
                 <li>Este comando nos permitirá introducir el correo de usuario</li>
             </ul>
         </li>
-        <li>git config --global --e
+        <li>git config --global -e
             <ul>
                 <li>Este comando nos permite confirmar los datos anteriores</li>
                 <li>para salir usaremos:
@@ -438,6 +438,16 @@
                     <ul>
                         <li>Con esta linea configuro mi sistema para que aplique esta tecnica por defecto</li>
                         <li>puedo revisar esta configuracion en "git config --global -e"</li>
+                    </ul>
+                </li>
+                <li>git pull --rebase
+                    <ul>
+                        <li>Esta línea me sirve para resolver conflictos en un pull con conflictos por los cambios realizados en git y github</li>
+                        <li>En el curso se sugiere "git config pull.rebase true" pero no funciona y aborta la operación</li>
+                        <li>Continuo en rebase</li>
+                        <li>Hago commit para confirmar los cambios</li>
+                        <li>Continuo en rebase</li>
+                        <li>git rebase --continue oara salir del rebase interactivo</li>
                     </ul>
                 </li>
             </ul>
