--- a/comandos-Git-github.html
+++ b/comandos-Git-github.html
@@ -451,6 +451,11 @@
                         <li>git rebase --continue oara salir del rebase interactivo</li>
                     </ul>
                 </li>
+                <li>git fetch
+                    <ul>
+                        <li>Este comando me permite actualizar mis referencias sin hacer pull</li>
+                    </ul>
+                </li>
             </ul>
         </li>
     </ul>
